font is responsive

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ button {
   /* min-width: 200px; */
   min-width: 20vw;
   min-height: 20vh;
-  font-size: 50px;
+  font-size: 4rem;
   border-radius: 15px;
   box-shadow: 10px 4px 20px rgba(0, 0, 0, 0.1);
 }
