--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-body {
-    font-family: Roboto, sans-serif;
-    color: #1F2937;
+
+html, body {
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+  font-family: Roboto, sans-serif;
+  color: #1F2937;
 }
 
 
@@ -10,6 +13,7 @@ body {
 .buttons {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 5vw;
 }
 
