--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 
 html, body {
   height: 100vh;
+  width: 100vw;
+  background: linear-gradient(#c3baba,#8d8b8b);
+  overflow-x: hidden;
+  overflow-y: hidden;
   height: calc(var(--vh, 1vh) * 100);
   font-family: Roboto, sans-serif;
   color: #1F2937;
